--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     <img src="img/slider/bg-2.jpg" alt="">
                     <div class="carousel-caption">
                       <h3 class="slide-title animated fadeInDown"><span>Waldorf Education</span> Harmony and the Whole Child</h3>
-                      <a href="/waldorf.html" class="btn btn-lg btn-border animated fadeInUp">Learn More</a>
+                      <a href="waldorf.html" class="btn btn-lg btn-border animated fadeInUp">Learn More</a>
                     </div>
                   </div>
 
@@ -236,7 +236,7 @@
                 <i class="fa fa-cogs"></i>
               </div>
               <div class="service-content">
-                <a href="/src/reggioEmila.html">
+                <a href="reggioEmila.html">
                   <h4>Reggio Emilia Approach</h4>
                   <p>
                     The Reggio Emilia approach is an instructive reasoning centering on preschool and essential instruction
@@ -273,7 +273,7 @@
                 <i class="fa fa-check"></i>
               </div>
               <div class="service-content">
-                <a href="/src/montessori.html">
+                <a href="montessori.html">
                   <h4>Montessori Education</h4>
                   <p>
                   The Montessori classroom is ready with materials chosen and outlined to meet the wants of each person child.                </p>
@@ -291,7 +291,7 @@
                 <i class="fa fa-flash"></i>
               </div>
               <div class="service-content">
-                <a href="/project.html">
+                <a href="project.html">
                   <h4>The Project Approach</h4>
                   <p>
                     The Project Approach could be a child-centered approach to arranging and organizing a wide run of learning exercises
@@ -310,7 +310,7 @@
                 <i class="fa fa-hand-pointer-o"></i>
               </div>
               <div class="service-content">
-                <a href="/personal.html">
+                <a href="personal.html">
                   <h4>Personal Philosophy</h4>
                   <p>
                     I accept that each student is distinctive with a way of learning and possess a set of needs and endowments that are brought to the classroom.                
@@ -369,10 +369,10 @@
                   <div class="sup-desc-wrap">
                     <div class="sup-desc-inner">
                       <div class="sup-link">
-                        <a class="left-link" href="/reggioEmila.html"><i class="fa fa-link"></i></a>
+                        <a class="left-link" href="reggioEmila.html"><i class="fa fa-link"></i></a>
                       </div>
                       <div class="sup-meta-wrap">
-                        <a class="sup-title" href="/reggioEmila.html">
+                        <a class="sup-title" href="reggioEmila.html">
                           <h4>Reggio Emilia Approach</h4>
                         </a>
                         <p class="sup-description">The environment is a fundamental portion of the Reggio Emilia approach.</p>
@@ -391,10 +391,10 @@
                   <div class="sup-desc-wrap">
                     <div class="sup-desc-inner">
                       <div class="sup-link">
-                        <a class="left-link" href="/reggioEmila.html"><i class="fa fa-link"></i></a>
+                        <a class="left-link" href="reggioEmila.html"><i class="fa fa-link"></i></a>
                       </div>
                       <div class="sup-meta-wrap">
-                        <a class="sup-title" href="/reggioEmila.html">
+                        <a class="sup-title" href="reggioEmila.html">
                           <h4>Critical reflection</h4>
                         </a>
                         <p class="sup-description">Reggio Emilia Standards Inside Australian Settings (Breathnach, 2017).</p>
@@ -413,11 +413,11 @@
                   <div class="sup-desc-wrap">
                     <div class="sup-desc-inner">
                       <div class="sup-link">
-                        <a class="left-link" href="/waldorf.html"><i class="fa fa-link"></i></a>
+                        <a class="left-link" href="waldorf.html"><i class="fa fa-link"></i></a>
 
                       </div>
                       <div class="sup-meta-wrap">
-                        <a class="sup-title" href="/waldorf.html">
+                        <a class="sup-title" href="waldorf.html">
                           <h4>Waldorf Education</h4>
                         </a>
                         <p class="sup-description">Harmony and the Whole Child</p>
@@ -436,10 +436,10 @@
                   <div class="sup-desc-wrap">
                     <div class="sup-desc-inner">
                       <div class="sup-link">
-                        <a class="left-link" href="/montessori.html"><i class="fa fa-link"></i></a>
+                        <a class="left-link" href="montessori.html"><i class="fa fa-link"></i></a>
                       </div>
                       <div class="sup-meta-wrap">
-                        <a class="sup-title" href="/montessori.html">
+                        <a class="sup-title" href="montessori.html">
                           <h4>Montessori Education</h4>
                         </a>
                         <p class="sup-description">Environment, material and methods</p>
@@ -458,10 +458,10 @@
                   <div class="sup-desc-wrap">
                     <div class="sup-desc-inner">
                       <div class="sup-link">
-                        <a class="left-link" href="/project.html"><i class="fa fa-link"></i></a>
+                        <a class="left-link" href="project.html"><i class="fa fa-link"></i></a>
                       </div>
                       <div class="sup-meta-wrap">
-                        <a class="sup-title" href="/project.html">
+                        <a class="sup-title" href="project.html">
                           <h4>Project Approach</h4>
                         </a>
                         <p class="sup-description">Active Inquiry in Early Childhood</p>
@@ -480,10 +480,10 @@
                   <div class="sup-desc-wrap">
                     <div class="sup-desc-inner">
                       <div class="sup-link">
-                        <a class="left-link" href="/personal.html"><i class="fa fa-link"></i></a>
+                        <a class="left-link" href="personal.html"><i class="fa fa-link"></i></a>
                       </div>
                       <div class="sup-meta-wrap">
-                        <a class="sup-title" href="/personal.html">
+                        <a class="sup-title" href="personal.html">
                           <h4>Personal Philosophy</h4>
                         </a>
                         <p class="sup-description">. As an instructor, my philosophy will attempt to improve the minds of the students. </p>
@@ -685,7 +685,7 @@
             </h3>
             <ul class="menu">
               <li><a href="#about">About Us</a></li>
-              <li><a href="/personal.html">Personal</a></li>
+              <li><a href="personal.html">Personal</a></li>
               <li><a href="#services">Approach</a></li>
               <li><a href="#portfolio">Portfolio</a></li>
               <li><a href="#contact">Contact</a></li>
