--- a/project.html
+++ b/project.html
@@ -51,7 +51,7 @@
                 <div class="collapse navbar-collapse" id="main-navbar">
                     <ul class="navbar-nav mr-auto w-100 justify-content-end clearfix">
                         <li class="nav-item">
-                            <a class="nav-link" href="/index.html">
+                            <a class="nav-link" href="index.html">
                                 Home
                             </a>
                         </li>
@@ -62,7 +62,7 @@
             <!-- Mobile Menu Start -->
             <ul class="mobile-menu navbar-nav">
                 <li>
-                    <a class="page-scroll" href="/index.html">
+                    <a class="page-scroll" href="index.html">
                         Home
                     </a>
                 </li>
@@ -293,7 +293,7 @@
               </h3>
               <ul class="menu">
                 <li><a href="#about">About Us</a></li>
-                <li><a href="/personal.html">Personal</a></li>
+                <li><a href="personal.html">Personal</a></li>
                 <li><a href="#services">Approach</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
