--- a/reggioEmila.html
+++ b/reggioEmila.html
@@ -51,7 +51,7 @@
                 <div class="collapse navbar-collapse" id="main-navbar">
                     <ul class="navbar-nav mr-auto w-100 justify-content-end clearfix">
                         <li class="nav-item">
-                            <a class="nav-link" href="/index.html">
+                            <a class="nav-link" href="index.html">
                                 Home
                             </a>
                         </li>
@@ -62,7 +62,7 @@
             <!-- Mobile Menu Start -->
             <ul class="mobile-menu navbar-nav">
                 <li>
-                    <a class="page-scroll" href="/index.html">
+                    <a class="page-scroll" href="index.html">
                         Home
                     </a>
                 </li>
@@ -93,7 +93,7 @@
                         Sweden in that same year. However, on May 1994, a non-profit organisation
                         was eventually established on behalf of Reggio in 1994 to promote the ideas.
                     </p>
-                    <img src="/img/slider/bg-3.png" alt="">
+                    <img src="img/slider/bg-3.png" alt="">
                 </div>
                 <!-- End Service Icon 1 -->
 
@@ -154,7 +154,7 @@
                         (Glenn, 2008). The children will learn how to use symbolic language such as painting, drama,
                         sculpting etc in their everyday life
                     </p>
-                    <img src="/img/testimonial/img2.jpg" alt="">
+                    <img src="img/testimonial/img2.jpg" alt="">
 
                 </div>
                 <!-- End Service Icon 1 -->
@@ -250,7 +250,7 @@
 
                 <!-- Start Service Icon 2 -->
                 <div class="col-md-6 col-lg-6 col-xs-12 rowSec">
-                    <img src="/img/testimonial/img1.jpg" alt="">
+                    <img src="img/testimonial/img1.jpg" alt="">
 
 
                     
@@ -328,7 +328,7 @@
               </h3>
               <ul class="menu">
                 <li><a href="#about">About Us</a></li>
-                <li><a href="/personal.html">Personal</a></li>
+                <li><a href="personal.html">Personal</a></li>
                 <li><a href="#services">Approach</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
