--- a/waldorf.html
+++ b/waldorf.html
@@ -51,7 +51,7 @@
                 <div class="collapse navbar-collapse" id="main-navbar">
                     <ul class="navbar-nav mr-auto w-100 justify-content-end clearfix">
                         <li class="nav-item">
-                            <a class="nav-link" href="/index.html">
+                            <a class="nav-link" href="index.html">
                                 Home
                             </a>
                         </li>
@@ -62,7 +62,7 @@
             <!-- Mobile Menu Start -->
             <ul class="mobile-menu navbar-nav">
                 <li>
-                    <a class="page-scroll" href="/index.html">
+                    <a class="page-scroll" href="index.html">
                         Home
                     </a>
                 </li>
@@ -154,7 +154,7 @@
                         So that they can make an environment and arrange an educational programs agreeing to their needs and 
                         interest.
                     </p>
-                    <img src="/img/testimonial/img3.jpg" alt="">
+                    <img src="img/testimonial/img3.jpg" alt="">
 
                 </div>
                 <!-- End Service Icon 1 -->
@@ -177,7 +177,7 @@
                         years to develop their physical body and imagination (Follari, 2015, p.260).
                     </p>
 
-                    <img src="/img/testimonial/img4.jpg" alt="">
+                    <img src=img/testimonial/img4.jpg" alt="">
                 </div>
                 <!-- End Service Icon 2 -->
 
@@ -251,7 +251,7 @@
               </h3>
               <ul class="menu">
                 <li><a href="#about">About Us</a></li>
-                <li><a href="/personal.html">Personal</a></li>
+                <li><a href="personal.html">Personal</a></li>
                 <li><a href="#services">Approach</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
