--- a/montessori.html
+++ b/montessori.html
@@ -198,7 +198,7 @@
                         </ol>
 
                     </p>
-                    <img src="/img/testimonial/img6.jpg" alt="">
+                    <img src="img/testimonial/img6.jpg" alt="">
 
                 </div>
                 <!-- End Service Icon 1 -->
@@ -223,7 +223,7 @@
                         interface, make capable choices for themselves and coordinate themselves to useful exercises 
                         (Valencic & Vogrinc, 2010).
                     </p>
-                    <img src="/img/testimonial/img5.jpg" alt="">
+                    <img src="img/testimonial/img5.jpg" alt="">
 
                     
                 </div>
@@ -266,7 +266,7 @@
               </h3>
               <ul class="menu">
                 <li><a href="#about">About Us</a></li>
-                <li><a href="/personal.html">Personal</a></li>
+                <li><a href="personal.html">Personal</a></li>
                 <li><a href="#services">Approach</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
