--- a/personal.html
+++ b/personal.html
@@ -62,7 +62,7 @@
             <!-- Mobile Menu Start -->
             <ul class="mobile-menu navbar-nav">
                 <li>
-                    <a class="page-scroll" href="/index.html">
+                    <a class="page-scroll" href="index.html">
                         Home
                     </a>
                 </li>
@@ -152,7 +152,7 @@
               </h3>
               <ul class="menu">
                 <li><a href="#about">About Us</a></li>
-                <li><a href="/personal.html">Personal</a></li>
+                <li><a href="personal.html">Personal</a></li>
                 <li><a href="#services">Approach</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
